--- a/sdk/api/evaluation-task/create.mdx
+++ b/sdk/api/evaluation-task/create.mdx
@@ -26,7 +26,7 @@ galtea.inference_results.create_batch(
 # Now, evaluate the entire session
 evaluation_tasks = galtea.evaluation_tasks.create(
     session_id=session.id,
-    metrics=["Coherence", "Conversation Relevancy"]
+    metrics=["Role Adherence", "Conversation Relevancy"]
 )
 ```
 
