--- a/sdk/tutorials/create-evaluation.mdx
+++ b/sdk/tutorials/create-evaluation.mdx
@@ -41,7 +41,7 @@ YOUR_VERSION_ID = "your_version_id"
 YOUR_TEST_ID = "your_test_id"
 METRICS_TO_EVALUATE = [
     "Factual Accuracy",
-    "coherence",
+    "Role Adherence",
 ]
 
 # --- Your Product's Logic (Placeholder) ---
