--- a/sdk/tutorials/monitor-production-responses-to-user-queries.mdx
+++ b/sdk/tutorials/monitor-production-responses-to-user-queries.mdx
@@ -26,7 +26,7 @@ def handle_user_query(user_query, retrieval_context=None):
     galtea.evaluation_tasks.create_single_turn(
       version_id=VERSION_ID,
       is_production=True,
-      metrics=["Coherence", "Answer Relevancy", "Faithfulness"],
+      metrics=["Role Adherence", "Answer Relevancy", "Faithfulness"],
       input=user_query,
       actual_output=model_response,
       retrieval_context=retrieval_context
