Fix table formatting by encoding pipe characters
Replaces pipe characters in table cell content with HTML entity &#124; to prevent Markdown table parsing issues and improve table rendering in scenario test documentation.

--- a/concepts/product/test/scenario-tests.mdx
+++ b/concepts/product/test/scenario-tests.mdx
@@ -104,9 +104,9 @@ Here are examples of scenario content and structure:
       <Tab title="Table View">
         | Goal | User Persona | Initial Prompt | Stopping Criterias | Max Iterations | Scenario |
         |------|--------------|----------------|-------------------|----------------|----------|
-        | Get help with a defective product | An upset customer who received a broken item | My product arrived broken and I'm very disappointed | Issue is resolved|Customer requests supervisor|Refund is processed | 12 | Product defect resolution |
-        | Understand how to use a new feature | A curious but non-technical user | I heard about a new feature but don't know how to use it | User successfully uses the feature|User gives up|Technical support is escalated | 10 | Feature education scenario |
-        | Cancel a subscription | A polite customer who wants to downgrade service | I'd like to cancel my subscription please | Subscription is cancelled|Alternative plan is accepted|Retention offer is declined | 8 | Subscription cancellation |
+        | Get help with a defective product | An upset customer who received a broken item | My product arrived broken and I'm very disappointed | Issue is resolved&#124;Customer requests supervisor&#124;Refund is processed | 12 | Product defect resolution |
+        | Understand how to use a new feature | A curious but non-technical user | I heard about a new feature but don't know how to use it | User successfully uses the feature&#124;User gives up&#124;Technical support is escalated | 10 | Feature education scenario |
+        | Cancel a subscription | A polite customer who wants to downgrade service | I'd like to cancel my subscription please | Subscription is cancelled&#124;Alternative plan is accepted&#124;Retention offer is declined | 8 | Subscription cancellation |
       </Tab>
       <Tab title="Raw CSV">
         ```csv
@@ -124,9 +124,9 @@ Here are examples of scenario content and structure:
       <Tab title="Table View">
         | Goal | User Persona | Initial Prompt | Stopping Criterias | Max Iterations | Scenario |
         |------|--------------|----------------|-------------------|----------------|----------|
-        | Find the right product for specific needs | A thorough researcher who compares many options | I'm looking for a solution but need help choosing | Product recommendation is accepted|User requests human consultation|User decides to research more | 15 | Product recommendation scenario |
-        | Get pricing information for enterprise solution | A business decision maker focused on ROI | What are your enterprise pricing options? | Quote is requested|Meeting is scheduled|User indicates budget constraints | 10 | Enterprise sales scenario |
-        | Compare different service tiers | An analytical customer who wants detailed comparisons | Can you help me understand the differences between your plans? | Plan is selected|User requests trial|User needs more time to decide | 12 | Service comparison scenario |
+        | Find the right product for specific needs | A thorough researcher who compares many options | I'm looking for a solution but need help choosing | Product recommendation is accepted&#124;User requests human consultation&#124;User decides to research more | 15 | Product recommendation scenario |
+        | Get pricing information for enterprise solution | A business decision maker focused on ROI | What are your enterprise pricing options? | Quote is requested&#124;Meeting is scheduled&#124;User indicates budget constraints | 10 | Enterprise sales scenario |
+        | Compare different service tiers | An analytical customer who wants detailed comparisons | Can you help me understand the differences between your plans? | Plan is selected&#124;User requests trial&#124;User needs more time to decide | 12 | Service comparison scenario |
       </Tab>
       <Tab title="Raw CSV">
         ```csv
