Add 2025-09-01 changelog: rebranding and updates
Introduces the September 1, 2025 changelog entry with Galtea rebranding, enhanced analytics, improved authentication and security, and advanced PDF knowledge extraction. Updates changelog.mdx to include the new entry and adds related snippet and image files.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -18,7 +18,9 @@ import Changelog_2025_05_05 from "/snippets/changelog/2025-05-05.mdx";
 import Changelog_2025_04_28 from "/snippets/changelog/2025-04-28.mdx";
 import Changelog_2025_08_04 from "/snippets/changelog/2025-08-04.mdx";
 import Changelog_2025_08_11 from "/snippets/changelog/2025-08-11.mdx";
+import Changelog_2025_09_01 from "/snippets/changelog/2025-09-01.mdx";
 
+<Changelog_2025_09_01 />
 <Changelog_2025_08_11 />
 <Changelog_2025_08_04 />
 <Changelog_2025_07_28 />
