--- a/changelog.mdx
+++ b/changelog.mdx
@@ -19,7 +19,9 @@ import Changelog_2025_04_28 from "/snippets/changelog/2025-04-28.mdx";
 import Changelog_2025_08_04 from "/snippets/changelog/2025-08-04.mdx";
 import Changelog_2025_08_11 from "/snippets/changelog/2025-08-11.mdx";
 import Changelog_2025_09_01 from "/snippets/changelog/2025-09-01.mdx";
+import Changelog_2025_09_08 from "/snippets/changelog/2025-09-08.mdx";
 
+<Changelog_2025_09_08 />
 <Changelog_2025_09_01 />
 <Changelog_2025_08_11 />
 <Changelog_2025_08_04 />
