--- a/concepts/product/test.mdx
+++ b/concepts/product/test.mdx
@@ -90,7 +90,7 @@ The Galtea SDK allows you to create, view, and manage tests programmatically.
   Possible values:
   - [Quality](/concepts/product/test/quality-tests): Tests that evaluate the quality and correctness of outputs
   - [Red Teaming](/concepts/product/test/red-teaming-tests): Tests that evaluate security, safety, and bias aspects
-  - [Scenarios](/concepts/scenarios): Tests that use conversation simulation to evaluate multi-turn dialogue interactions
+  - [Scenarios](/concepts/product/test/scenario-tests): Tests that use conversation simulation to evaluate multi-turn dialogue interactions
 </ResponseField>
 
 <Tabs>
