--- a/sdk/usage.mdx
+++ b/sdk/usage.mdx
@@ -69,13 +69,13 @@ You can create custom [Metric Types](/concepts/metric-type) tailored to your spe
 # Create a standard metric type via API
 metric_type_from_api = galtea.metrics.create(
     name="accuracy_v1",
+    test_type="QUALITY",
     evaluator_model_name="GPT-4.1",
-    criteria="Determine whether the 'actual output' is equivalent to the 'expected output'."
-    evaluation_params=["input", "expected_output", "actual_output"],
+    judge_prompt="Determine whether the output is equivalent to the expected output. Output: \"{actual_output}\". Expected Output: \"{expected_output}.\""
 )
 
 # Or define a custom metric locally for deterministic checks
-from galtea import CustomScoreMetric
+from galtea import CustomScoreEvaluationMetric
 
 # First, it needs to be created in the platform
 metric_type_from_api = galtea.metrics.create(
@@ -84,7 +84,7 @@ metric_type_from_api = galtea.metrics.create(
 )
 
 # Then, you can define your custom metric class
-class MyKeywordMetric(CustomScoreMetric):
+class MyKeywordMetric(CustomScoreEvaluationMetric):
     def __init__(self):
         super().__init__(name="keyword-check")
     def measure(self, *args, actual_output: str | None = None, **kwargs) -> float:
