Improve API docs for usage and cost info fields
Expanded documentation for `usage_info` and `cost_info` response fields in evaluation and inference APIs, specifying key types and possible values. Added `conversation_simulator_version` field to single-turn evaluation task response. Clarified default behavior for `max_turns` in simulator API. Updated tutorial to include missing import and minor formatting fix.

--- a/sdk/api/simulator/simulate.mdx
+++ b/sdk/api/simulator/simulate.mdx
@@ -45,7 +45,7 @@ for message in result.messages:
 </ResponseField>
 
 <ResponseField name="max_turns" type="int">
-  Maximum number of conversation turns. Default: 20
+  Maximum number of conversation turns. Defaults to the Test Case's max turns if not provided.
 </ResponseField>
 
 <ResponseField name="log_inference_results" type="bool">
