Document agent_goes_first response field
Adds documentation for the agent_goes_first boolean response field, explaining its effect on message generation order in simulation results.

--- a/sdk/api/simulator/simulate.mdx
+++ b/sdk/api/simulator/simulate.mdx
@@ -60,3 +60,7 @@ for message in result.messages:
 <ResponseField name="include_metadata" type="bool">
   Whether to include metadata in the simulation result. Default: False
 </ResponseField>
+
+<ResponseField name="agent_goes_first" type="bool">
+  If True, the agent will generate the first message before any user messages are generated. Default: False
+</ResponseField>
