Add new judge prompt variables to documentation
Added descriptions for five new judge prompt variables: user_persona, goal, scenario, stopping_criterias, and conversation_turns. This update clarifies available template options for evaluator models.

--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -217,6 +217,11 @@ Judge prompts are templates that tell the evaluator model how to assess your out
 - `{product_capabilities}` - What your product can do
 - `{product_inabilities}` - What your product cannot or should not do
 - `{product_security_boundaries}` - Security restrictions
+- `{user_persona}` - Information about the user interacting with the agent
+- `{goal}` - The user's goal
+- `{scenario}` - The scenario in which the user is operating
+- `{stopping_criterias}` - List of criteria that define when the conversation should end
+- `{conversation_turns}` - All turns in the conversation
 
 ### Evaluation Process
 
