Clarify description of Custom Judge metrics
Updated the explanation to state that Custom Judge metrics use custom judge prompts instead of the G-Eval framework, improving clarity for users creating evaluation logic.

--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -202,7 +202,7 @@ At Galtea, we use two types of metrics to evaluate large language model (LLM) ou
   The non-deterministic metrics, powered by Large Language Models that act as Judges, utilize models that have demonstrated the best performance in our internal benchmarks and testing. We are committed to continuously evolving and improving these evaluator models to ensure the highest quality assessments over time.
 </Note>
 
-Custom Judge metrics use the G-Eval framework to evaluate LLM outputs based on your specific requirements. The primary way to create these metrics is by providing a `judge_prompt` that defines the evaluation logic.
+Custom Judge metrics use custom judge prompts to evaluate LLM outputs based on your specific requirements. The primary way to create these metrics is by providing a `judge_prompt` that defines the evaluation logic.
 
 ### How Judge Prompts Work
 
