--- a/changelog.mdx
+++ b/changelog.mdx
@@ -21,7 +21,9 @@ import Changelog_2025_08_11 from "/snippets/changelog/2025-08-11.mdx";
 import Changelog_2025_09_01 from "/snippets/changelog/2025-09-01.mdx";
 import Changelog_2025_09_08 from "/snippets/changelog/2025-09-08.mdx";
 import Changelog_2025_09_15 from "/snippets/changelog/2025-09-15.mdx";
+import Changelog_2025_09_22 from "/snippets/changelog/2025-09-22.mdx";
 
+<Changelog_2025_09_22 />
 <Changelog_2025_09_15 />
 <Changelog_2025_09_08 />
 <Changelog_2025_09_01 />
