--- a/sdk/api/test/create.mdx
+++ b/sdk/api/test/create.mdx
@@ -31,7 +31,7 @@ test = galtea.tests.create(
     name="security-red-team-test",
     type="RED_TEAMING",
     product_id="YOUR_PRODUCT_ID",
-    variants=["harmful_content", "bias", "privacy"],
+    variants=["Toxicity", "Misuse", "Data Leakage"],
     strategies=["jailbreaking", "prompt_injection"],
     max_test_cases=50
 )
