--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -93,7 +93,7 @@ metric = galtea.metrics.get_by_name(name="Jailbreak Resilience")
 
 ## 6. Run Evaluations
 
-Now, run an [evaluation](/concepts/product/version/session/evaluation) by creating [evaluation tasks](/concepts/product/version/session/evaluation/task).
+Now, run [evaluation tasks](/concepts/product/version/session/evaluation-task) against your test cases.
 
 <Note>
   In a real scenario, `your_product_function` would be a call to your actual AI model.
