--- a/sdk/tutorials/create-evaluation-with-custom-scores.mdx
+++ b/sdk/tutorials/create-evaluation-with-custom-scores.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Evaluate with Metrics with Custom Scores'
-description: "Learn how to run evaluations with your own custom, deterministic metrics."
+description: "Learn how to run evaluation tasks with your own custom, deterministic metrics."
 icon: "vial-circle-check"
 iconType: "solid"
 ---
