--- a/snippets/changelog/2025-09-01.mdx
+++ b/snippets/changelog/2025-09-01.mdx
@@ -15,7 +15,7 @@ The Analytics views have received significant improvements to make data analysis
 - **Optimized Filter Layout:** Filters no longer occupy valuable screen real estate, giving you more space to focus on your analytics data and insights.
 - **Improved Visual Clarity:** Enhanced data presentation makes it easier to interpret results and make informed decisions about your AI systems.
 
-These improvements build upon our existing [analytics capabilities](/sdk/tutorials/create-evaluation) to provide a more seamless evaluation experience.
+These improvements build upon our existing [analytics capabilities](/sdk/tutorials/create-evaluation-task) to provide a more seamless evaluation experience.
 
 ## Strengthened Authentication and Security
 
@@ -23,5 +23,5 @@ We've implemented more secure and robust authentication mechanisms across the pl
 
 ## Advanced PDF Knowledge Extraction
 
-Our document processing capabilities have been significantly improved for PDF files. The enhanced extraction algorithms now provide more accurate and comprehensive knowledge retrieval from PDF documents, making it easier to create relevant [test cases](/concepts/product/test) and evaluation scenarios from your existing documentation and knowledge bases.
+Our document processing capabilities have been significantly improved for PDF files. The enhanced extraction algorithms now provide more accurate and comprehensive knowledge retrieval from PDF documents, making it easier to create relevant [test cases](/concepts/product/test) and evaluation task scenarios from your existing documentation and knowledge bases.
 </Update>
