--- a/snippets/changelog/2025-09-22.mdx
+++ b/snippets/changelog/2025-09-22.mdx
@@ -1,7 +1,7 @@
 <Update label="2025-09-22" description="Consistent Sorting, Improved Navigation, and SAML SSO">
 ## Consistent Sorting and Enhanced Navigation
 
-We've made significant usability improvements to the platform. Table sorting is now more consistent and persistent; you can navigate away, refresh the page, and your chosen sort order will remain, ensuring a smoother workflow. Additionally, navigating from an [Evaluation Task](/concepts/product/version/session/evaluation/task) is easier than ever. You can now right-click on any task in the table or use the dropdown menu in the details page to jump directly to the related [Test Case](/concepts/product/test/case), [Session](/concepts/product/version/session), or [Evaluation](/concepts/product/version/session/evaluation).
+We've made significant usability improvements to the platform. Table sorting is now more consistent and persistent; you can navigate away, refresh the page, and your chosen sort order will remain, ensuring a smoother workflow. Additionally, navigating from an [Evaluation Task](/concepts/product/version/session/evaluation-task) is easier than ever. You can now right-click on any task in the table or use the dropdown menu in the details page to jump directly to the related [Test Case](/concepts/product/test/case) or [Session](/concepts/product/version/session).
 
 <Frame>
   <img src="/images/changelog/2025-09-22_evaluation-task-navigation.png" alt="Right-click navigation from the Evaluation Task table" />
