--- a/sdk/api/evaluation-task/list.mdx
+++ b/sdk/api/evaluation-task/list.mdx
@@ -1,31 +1,22 @@
 ---
 title: 'Listing Evaluation Tasks'
-description: "List all evaluation tasks associated with a specific evaluation."
+description: "List all evaluation tasks associated with a specific session."
 ---
 
 
 ## Returns
-Returns a list of [EvaluationTask](/concepts/product/version/session/evaluation/task) objects.
+Returns a list of [EvaluationTask](/concepts/product/version/session/evaluation-task) objects.
 
 ## Example
 ```python
-# List tasks for an evaluation
-evaluation_tasks = galtea.evaluation_tasks.list(evaluation_id="YOUR_EVALUATION_ID")
-
 # List tasks for a session
 session_tasks = galtea.evaluation_tasks.list(session_id="YOUR_SESSION_ID")
 ```
 
 ## Parameters
-<ResponseField name="evaluation_id" type="string" optional>
-  The ID of the evaluation for which you want to list tasks.
-</ResponseField>
-<ResponseField name="session_id" type="string" optional>
+<ResponseField name="session_id" type="string" required>
   The ID of the session for which you want to list tasks.
 </ResponseField>
-<Note>
-  At least one of `evaluation_id` or `session_id` must be provided.
-</Note>
 <ResponseField name="offset" type="int">
   The number of tasks to skip before starting to collect the result set.
 </ResponseField>
